[package]
name = "tweeta"
version = "0.1.0"
authors = ["Harsh Kumar <contact@harshkumar.me>"]
edition = "2021"
description = "A Simple Rust lib by MY EDEN AI for creating Twitter bots"
license = "MIT"
repository = "https://github.com/myedenai/tweeta"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauthcli = "1.0.4"
url = "1.7.2"
reqwest = "0.9.16"
serde = { version = "1.0.90",  features = ["derive"] }
